--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
     -->
     <title>Calendar</title>
   </head>
-  <body>
+  <body class="bg-blue-200/20">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
